@@ -1,6 +1,14 @@
 /***********************************************************************
 X3 ChangeLog
 
+2008-09-06  Matthew Beeching  <jobe@mdbnet.co.uk>
+
+	* src/proto-p10.c: Added new PRIV_*'s to privtab
+
+	* src/mod-snoop.c: Added support for channel mode +h
+
+	* src/hash.h: #define's for missing PRIV_*'s
+
 2008-09-02  Neil Spierling  <sirvulcan@sirvulcan.co.nz>
 
 	* src/chanserv.c: Fixed an issue with OPCHAN and channels using off
